# GenPy

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_mps.py
api/: __init__.py  app.py  config.py  dependencies.py  inference.py  schemas.py
configs/: api.yaml  base.yaml  benchmark.yaml  code_small.yaml  continued_pretraining.yaml  corpus_v2.yaml  dataset_pipeline.yaml  documentation_corpus.yaml  final_corpus.yaml  fine_tune.yaml  finetuning.yaml  generation.yaml  lora.yaml  model.yaml  optimizer.yaml  phase6_1.yaml  phase6_3.yaml  pretraining.yaml  pypi.yaml  python_corpus.yaml  quantization.yaml  tokenizer.yaml  training.yaml
data/: README.md
docs/: continued_pretraining.md  custom_tokenizer.md  documentation_corpus.md  final_corpus.md  github_corpus_builder.md  phase10_quantization.md  phase11_api.md  phase12_chat_interface.md  phase6_1_continued_pretraining.md  phase6_2_corpus.md  phase6_3_continued_pretraining.md  phase6_pretraining.md  phase7_finetuning.md  phase9_lora.md  pretraining_corpus_builder.md  pypi_corpus_builder.md  python_corpus_builder.md  python_corpus_collector.md  python_corpus_expansion.md  python_corpus_population.md  python_dataset_pipeline.md
evaluation/: evaluation_report.md  evaluation_results.csv  evaluation_results.json  quantization_report.md  quantization_results.csv  quantization_results.json
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
generated_samples/: phase7_step_00100.json  phase7_step_00200.json  phase7_step_00300.json  phase7_step_00400.json  phase7_step_00500.json  phase7_step_00600.json  phase7_step_00700.json  phase7_step_00800.json  phase7_step_00900.json  phase7_step_01000.json  phase7_step_01100.json  phase7_step_01200.json  phase7_step_01300.json  phase7_step_01400.json  phase7_step_01500.json  phase7_step_01600.json  phase7_step_01700.json  phase7_step_01800.json  phase7_step_01900.json  phase7_step_02000.json  step_01000.json  step_02000.json  step_03000.json  step_04000.json  step_05000.json
metrics/: training_metrics.csv  training_metrics.jsonl
scripts/: analyze_corpus_v2.py  benchmark_model.py  benchmark_phase6_3.py  benchmark_quantization.py  build_corpus_v2.py  build_dataset.py  build_documentation_corpus.py  build_final_corpus.py  build_github_corpus.py  build_pretraining_corpus.py  build_pypi_corpus.py  build_python_corpus.py  build_vocabulary.py  check_setup.py  clean_python_dataset.py  collect_python_corpus.py  collect_python_data.py  continued_pretraining.py  deduplicate_dataset.py  diagnose_model_quality.py  download_code_training_data.py  evaluate_code_model.py  evaluate_gpt.py  evaluate_lora.py  expand_python_corpus.py  fine_tune_code_model.py  fine_tune_gpt.py  finetune_gpt.py  generate_code.py  generate_instruction_pairs.py  generate_text.py  inspect_checkpoint.py  inspect_code_tokenizer.py  inspect_embeddings.py  inspect_feed_forward.py  inspect_gpt_model.py  inspect_loss_optimizer.py  inspect_multi_head_attention.py  inspect_norm_residual.py  inspect_positional_encoding.py  (+23 more)
tests/: __init__.py  test_api.py  test_attention.py  (+46 more)
(+182 files in other folders)
